Moved introspection into its own class

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
         "samuelcolvin.jinjahtml",
         "ms-python.python",
         "ms-python.vscode-pylance",
-        "ms-python.isort"
+        "ms-python.isort",
+        "njpwerner.autodocstring"
     ]
 }
