--- a/config.yaml.example
+++ b/config.yaml.example
@@ -47,3 +47,4 @@ job_threads: 32
 target_partition_size_bytes: 52428800
 # Introspection expires after this many seconds since last
 introspection_expire_s: 604800
+tinydb_database_file: tinydb.json
