--- a/config.yaml.example
+++ b/config.yaml.example
@@ -10,7 +10,7 @@ spark:
     spark.default.parallelism: "8"
     spark.eventLog.enabled: "false"
     spark.eventLog.dir: "spark_log"
-    spark.driver.extraClassPath: "sqljdbc42.jar:gcs-connector-hadoop3-latest.jar:spark-3.1-bigquery-0.28.0-preview.jar"
+    spark.driver.extraClassPath: "sqljdbc42.jar:gcs-connector-hadoop3-2.2.11-shaded.jar:spark-3.1-bigquery-0.28.0-preview.jar"
     spark.sql.session.timeZone: "America/Los_Angeles"
     spark.sql.jsonGenerator.ignoreNullFields": "false"
     spark.sql.debug.maxToStringFields: "25"
@@ -40,20 +40,23 @@ jdbc:
     password: "PASSWORD"
     driver: "com.microsoft.sqlserver.jdbc.SQLServerDriver"
     fetchsize: "1000"
+
 schema: dbo
-# Python thread pool -- used for introspection and launching spark Jobs
-job_threads: 32 
+
 # Your target file size for Spark output files
 target_partition_size_bytes: 52428800
+
+tinydb_database_file: tinydb.json
+
 # Introspection expires after this many seconds since last
 introspection_expire_s: 604800
-tinydb_database_file: tinydb.json
 
 # Controls parallelism of SQL introspection workers (one SQL connection per worker)
 # note: introspect_workers + spark.threads = total parallel SQL queries
 introspect_workers: 8
+
 # No more than this number of Spark jobs will be in 'running' state.
-extract_workers: 4
+extract_workers: 8
+
 # Controls parallelism of BigQuery load operations 
 load_workers: 8
-
