Introspection now inspects every col in a composite PK to determine best choice

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,6 +16,7 @@
             "module": "dumpty.main",
             "console": "integratedTerminal",
             "args": [
+                "--verbose",
                 "--config",
                 "test.yaml",
                 "--credentials",
