--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,8 @@ dependencies = [
   "tenacity>=8.1.0",
   "google-cloud-storage>=2.7.0",
   "tinydb-serialization>=2.1.0",
-  "pyodbc>=4.0.35"
+  "pyodbc>=4.0.35",
+  "funcy>=1.18"
 ]
 
 
