--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,7 +1,6 @@
 spark: 
   threads: 8
   format: "json"
-  # none, bzip2, gzip, lz4, snappy and deflate
   compression: "gzip"
   normalize_schema: "true"
   timestamp_format: "yyyy-MM-dd HH:mm:ss"
@@ -10,7 +9,7 @@ spark:
     spark.default.parallelism: "8"
     spark.eventLog.enabled: "false"
     spark.eventLog.dir: "spark_log"
-    spark.driver.extraClassPath: "sqljdbc42.jar:gcs-connector-hadoop3-2.2.11-shaded.jar:spark-3.1-bigquery-0.28.0-preview.jar"
+    spark.driver.extraClassPath: "mssql-jdbc-12.2.0.jre11.jar:gcs-connector-hadoop3-2.2.11-shaded.jar:spark-3.1-bigquery-0.28.0-preview.jar"
     spark.sql.session.timeZone: "America/Los_Angeles"
     spark.sql.jsonGenerator.ignoreNullFields": "false"
     spark.sql.debug.maxToStringFields: "25"
@@ -35,7 +34,7 @@ sqlalchemy:
   connect_args:
     connect_timeout: 60
 jdbc:
-  url: "jdbc:sqlserver://HOSTNAME:PORT;databaseName=DATABASE;"
+  url: "jdbc:sqlserver://HOSTNAME:PORT;databaseName=DATABASE;encrypt=true;trustServerCertificate=true;"
   properties:
     user: USERNAME
     password: "PASSWORD"
