--- a/config.yaml.example
+++ b/config.yaml.example
@@ -1,7 +1,6 @@
 spark: 
   threads: 8
   format: "json"
-  # none, bzip2, gzip, lz4, snappy and deflate
   compression: "gzip"
   normalize_schema: "true"
   timestamp_format: "yyyy-MM-dd HH:mm:ss"
@@ -10,7 +9,7 @@ spark:
     spark.default.parallelism: "8"
     spark.eventLog.enabled: "false"
     spark.eventLog.dir: "spark_log"
-    spark.driver.extraClassPath: "sqljdbc42.jar:gcs-connector-hadoop3-2.2.11-shaded.jar:spark-3.1-bigquery-0.28.0-preview.jar"
+    spark.driver.extraClassPath: "mssql-jdbc-12.2.0.jre11.jar:gcs-connector-hadoop3-2.2.11-shaded.jar:spark-3.1-bigquery-0.28.0-preview.jar"
     spark.sql.session.timeZone: "America/Los_Angeles"
     spark.sql.jsonGenerator.ignoreNullFields": "false"
     spark.sql.debug.maxToStringFields: "25"
@@ -31,17 +30,17 @@ sqlalchemy:
   url: "mssql+pyodbc://USERNAME:PASSWORD@DBHOSTNAME:PORT/DATABASE?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes&Encrypt=yes"
   pool_size: 20
   max_overflow: 20
+  isolation_level: "READ UNCOMMITTED"
   connect_args:
     connect_timeout: 60
 jdbc:
-  url: "jdbc:sqlserver://HOSTNAME:PORT;databaseName=DATABASE;"
+  url: "jdbc:sqlserver://HOSTNAME:PORT;databaseName=DATABASE;encrypt=true;trustServerCertificate=true;"
   properties:
     user: USERNAME
     password: "PASSWORD"
     driver: "com.microsoft.sqlserver.jdbc.SQLServerDriver"
     fetchsize: "1000"
-
-schema: dbo
+    sessionInitStatement: "SET TRANSACTION ISOLATION LEVEL READ UNCOMMITTED"
 
 # Your target file size for Spark output files
 target_partition_size_bytes: 52428800
@@ -63,3 +62,45 @@ extract_workers: 8
 
 # Controls parallelism of BigQuery load operations 
 load_workers: 8
+
+# GCS bucket URI for extrated tables
+target_uri: gs://bucket/path
+
+# project_id.dataset to create
+target_dataset: my_project_id.my_dataset_id
+
+# Access entries at dataset creation time. You will want to include the service account here!
+target_dataset_access_entries:
+  - role: "OWNER"
+    userByEmail: "etl@my_project.iam.gserviceaccount.com"
+  - role: "OWNER"
+    userByEmail: "dba@somewhere.com"
+
+# Additional access entries to grant when dataset has completed loading
+target_dataset_additional_access_entries:
+  - role: "READER"
+    userByEmail: "reader@somewhere.com"
+
+# Labels to apply at dataset creation time
+target_dataset_pre_labels:
+  loading: true
+
+# Labels to apply when dataset has completed loading
+target_dataset_post_labels:
+  loading: false
+
+# Delete the dataset before extracting
+drop_dataset: false
+
+# Retry GCP functions that fail
+retry: false
+
+# Source database schema name
+schema: dbo
+
+# Tables to extract from above schema
+tables: 
+  - REPORTS
+  - LOGS
+
+  
