--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
-name = "dumpty"  # Required
-version = "0.1.0"  # Required
+name = "dumpty" 
+version = "1.0.0" 
 description = "Incremental backup utility for a popular reporting database"
 readme = "README.md"
 requires-python = ">=3.9"
